--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-
+ @import url('https://fonts.googleapis.com/css2?family=The+Nautigal:wght@700&display=swap');
 body {
     margin: 0;
     font-family: 'The Nautigal', cursive;
