--- a/style.css
+++ b/style.css
@@ -1,8 +1,16 @@
- @import url('https://fonts.googleapis.com/css2?family=The+Nautigal:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=The+Nautigal:wght@700&display=swap');
 body {
     margin: 0;
+    
+  }
+
+  h1{
     font-family: 'The Nautigal', cursive;
   }
+  h2{font-family: 'The Nautigal', cursive;}
+  h3{font-family: 'The Nautigal', cursive;}
+  h4{font-family: 'The Nautigal', cursive;}
+  h5{font-family: 'The Nautigal', cursive;}
   
   .sidebar {
     
@@ -25,6 +33,7 @@ body {
   .sidebar a.active {
     background-color: #04AA6D;
     color: white;
+    font-family: 'The Nautigal', cursive;
   }
   
   .sidebar a:hover:not(.active) {
@@ -52,5 +61,6 @@ body {
     .sidebar a {
       text-align: center;
       float: none;
+      
     }
   }
