--- a/style.css
+++ b/style.css
@@ -64,3 +64,11 @@ body {
       
     }
   }
+.footer {
+   position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   background-color: blueviolet;
+   color: white;
+    text-align: center;}
