--- a/style.css
+++ b/style.css
@@ -1,74 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=The+Nautigal:wght@700&display=swap');
-body {
-    margin: 0;
-    
-  }
-
-  h1{
-    font-family: 'The Nautigal', cursive;
-  }
-  h2{font-family: 'The Nautigal', cursive;}
-  h3{font-family: 'The Nautigal', cursive;}
-  h4{font-family: 'The Nautigal', cursive;}
-  h5{font-family: 'The Nautigal', cursive;}
-  
-  .sidebar {
-    
-    margin: 0;
-    padding: 0;
-    width: 200px;
-    background-color: #f1f1f1;
-    position: fixed;
-    height: 100%;
-    overflow: auto;
-  }
-  
-  .sidebar a {
-    display: block;
-    color: black;
-    padding: 16px;
-    text-decoration: none;
-  }
-   
-  .sidebar a.active {
-    background-color: #04AA6D;
-    color: white;
-    font-family: 'The Nautigal', cursive;
-  }
-  
-  .sidebar a:hover:not(.active) {
-    background-color: #555;
-    color: white;
-  }
-  
-  div.content {
-    margin-left: 200px;
-    padding: 1px 16px;
-    height: 1000px;
-  }
-  
-  @media screen and (max-width: 700px) {
-    .sidebar {
-      width: 100%;
-      height: auto;
-      position: relative;
-    }
-    .sidebar a {float: left;}
-    div.content {margin-left: 0;}
-  }
-  
-  @media screen and (max-width: 400px) {
-    .sidebar a {
-      text-align: center;
-      float: none;
-      
-    }
-  }
-.footer {
-   position: fixed;
-   left: 0;
-   bottom: 0;
-   width: 100%;
-   background-color: blueviolet;
-   color: white;
-    text-align: center;}
+img{
+    width: 100%;
+    justify-content: center;
+}
